# statschat-global

./: .gitignore  LICENSE  README.md  pdf_scrape_test.py  pdf_to_json.py  pyproject.toml
docs/: config_guide.md  development_and_testing.md  implementation.md  organisational_setup.md  repo_structure.md  running_api.md  running_app.md  running_statschat.md  search_config_paramaters.md  server_deployment.md  setup_guide.md  update_db.md
docs/api/: README.md  development_and_testing.md  repo_structure.md  search_config_paramaters.md  search_engine_parameters.md  setup_guide.md  update_db.md
fast-api/: main_api.py  main_api_cloud.py  main_api_local.py
flask-app/: __init__.py  app.py
flask-app/templates/: ons_layout.html  statschat.html
statschat/: __init__.py  pdf_runner.py
statschat/_config/: main.toml
statschat/config/: main.toml  utils.py
statschat/database_update/: pdf_to_add.py  update_db.py
statschat/embedding/: latest_updates.py  preprocess.py  preprocess_update_db.py
statschat/generative/: cloud_llm.py  generate_local.py  generate_local_copy.py  llm.py  llm_with_local.py  llm_with_local_copy.py  local_llm.py  prompts.py  prompts_copy.py  prompts_local.py
statschat/model_evaluation/: evaluation.py
statschat/pdf_processing/: json_release_date_check.py  merge_database_files.py  multiple_pdf_downloader.py  pdf_database_update.py  pdf_downloader.py  pdf_explore.py  pdf_local_load.py  pdf_to_json.py
