[project]
name = "statschat"
description = "An app for RAG-based search of KNBS statistical publications"
authors = [{name = "Kenya National Bureau of Statistics", email = "info@knbs.or.ke"}]
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.10"
dynamic = ["version"]
dependencies = [
    "bs4==0.0.1",
    "faiss-cpu==1.9.0.post1",
    "google-cloud-aiplatform==1.38.1",
    "jq==1.8.0",
    "langchain-openai==0.2.12",
    "langchain==0.3.15",
    "langchain-community==0.3.15",
    "langchain-core==0.3.31",
    "langchain-huggingface==0.1.2",
    "pandas==2.2.2",
    "pydantic==2.10.3",
    "PyPDF2==3.0.1",
    "rapidfuzz==3.1.1",
    "requests==2.31.0",
    "sentence_transformers==3.3.1",
    "toml==0.10.2",
    "typing==3.7.4.3",
]

[project.optional-dependencies]
test = [
    "pytest==6.2.5",
    "pytest-pythonpath==0.7.4",
]
backend = [
    "fastapi==0.110.0",
    "uvicorn==0.27.1",
]
frontend = [
    "Flask==2.3.2",
    "gunicorn==21.2.0",
]
dev = [
    "ipykernel==6.23.2",
    "pre-commit==3.3.3",
    "statschat[test]",
    "statschat[backend]",
    "statschat[frontend]",
]

[project.urls]
homepage = "https://github.com/KNBS-StatsChat/statschat-ke"

[build-system]
requires = ["setuptools>=62"]
build-backend = "setuptools.build_meta"

[tool.setuptools.dynamic]
version = {attr = "statschat.__version__"}

[tool.setuptools.packages.find]
include = ["statschat"]
namespaces = false

[tool.setuptools.package-data]
statschat = ["config/*.toml"]
